Add back starship env

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -170,6 +170,8 @@ fpath+=~/.zfunc
 source <(fzf --zsh)
 
 # starship
+export STARSHIP_CONFIG=~/.config/starship/.starship.toml
+
 eval "$(starship init zsh)"
 
 # zoxide
