Add bitwarden cli

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -18,6 +18,9 @@ fi
 
 brew install go
 
+# tool dependent on npm
+npm install -g @bitwarden/cli
+
 # bazzite flatpacks
 {{- if eq .chezmoi.hostname "bazzite" }}
 flatpak -y install bitwarden
