--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -31,6 +31,7 @@ export EDITOR=nvim
 export VISUAL=nvim
 export VOLTA_HOME="$HOME/.volta"
 export PATH="$VOLTA_HOME/bin:$PATH"
+export VOLTA_FEATURE_PNPM=1
 
 eval "$(starship init bash)"
 eval "$(zoxide init bash)"
