--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -25,7 +25,7 @@ fi
 unset rc
 
 ## USER
-export STARSHIP_CONFIG=~/.config/starship/starship.toml
+export STARSHIP_CONFIG=~/.config/starship/.starship.toml
 
 export EDITOR=nvim
 export VISUAL=nvim
