--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -26,4 +26,5 @@ npm install -g @bitwarden/cli
 flatpak -y install bitwarden
 flatpak install org.freedesktop.Platform.VulkanLayer.MangoHud
 flatpak override --user --env=MANGOHUD=1 com.valvesoftware.Steam
+flatpak install flathub com.discordapp.Discord
 {{- end }}
