Combine nushell and zellij

--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -3,7 +3,7 @@
 # Common Mac and Linux Bazzite stuff
 
 ## Command line tool
-brew install nushell nvim starship zoxide fzf
+brew install nushell nvim starship zoxide fzf zellij
 
 ## Lang toolchain
 
