--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -6,6 +6,11 @@
 brew install nushell nvim starship zoxide fzf zellij
 
 ## Lang toolchain
+if ! command -v devpod  &>/dev/null; then
+    curl -L -o devpod "https://github.com/loft-sh/devpod/releases/latest/download/devpod-linux-amd64" && sudo install -c -m 0755 devpod /usr/local/bin && rm -f devpod
+else 
+    echo "Devpod already installed"
+fi
 
 if ! command -v volta &>/dev/null; then
     curl https://get.volta.sh | bash
