--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -29,9 +29,16 @@ export STARSHIP_CONFIG=~/.config/starship/.starship.toml
 
 export EDITOR=nvim
 export VISUAL=nvim
-export VOLTA_HOME="$HOME/.volta"
-export PATH="$VOLTA_HOME/bin:$PATH"
-export VOLTA_FEATURE_PNPM=1
+
+export PATH="/run/user/1000/fnm_multishells/23315_1742848841047/bin":"$PATH"
+export FNM_MULTISHELL_PATH="/run/user/1000/fnm_multishells/23315_1742848841047"
+export FNM_VERSION_FILE_STRATEGY="local"
+export FNM_DIR="/home/fbrousseau/.local/share/fnm"
+export FNM_LOGLEVEL="info"
+export FNM_NODE_DIST_MIRROR="https://nodejs.org/dist"
+export FNM_COREPACK_ENABLED="false"
+export FNM_RESOLVE_ENGINES="true"
+export FNM_ARCH="x64"
 
 eval "$(starship init bash)"
 eval "$(zoxide init bash)"
