--- a/run_onchange_install-packages.sh.tmpl
+++ b/run_onchange_install-packages.sh.tmpl
@@ -12,7 +12,7 @@ else
     echo "Devpod already installed"
 fi
 
-brew install go pnpm fnm
+brew install go pnpm fnm uv
 
 # tool dependent on npm
 npm install -g @bitwarden/cli
@@ -21,6 +21,14 @@ npm install -g @bitwarden/cli
 {{- if eq .chezmoi.hostname "bazzite" }}
 flatpak override --user --env=MANGOHUD=1 com.valvesoftware.Steam
 flatpak -y --system --or-update install bitwarden
+flatpak -y --system --or-update install vivaldi
 flatpak -y --system --or-update install org.freedesktop.Platform.VulkanLayer.MangoHud
 flatpak -y --system --or-update install flathub com.discordapp.Discord
 {{- end }}
+
+if ! command -v firefox &> /dev/null; then
+    echo "No firefox installed..."
+else 
+    # remove firefox
+    flatpak -y --noninteractive uninstall firefox
+fi
