Add command from bluefin

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -43,3 +43,6 @@ export FNM_ARCH="x64"
 eval "$(starship init bash)"
 eval "$(zoxide init bash)"
 eval "$(fnm env --use-on-cd --shell bash)"
+### bling.sh source start
+test -f /usr/share/ublue-os/bling/bling.sh && source /usr/share/ublue-os/bling/bling.sh
+### bling.sh source end
