--- a/run_onchange_00-install-packages.sh.tmpl
+++ b/run_onchange_00-install-packages.sh.tmpl
@@ -3,7 +3,7 @@
 # Common Mac and Linux Bazzite stuff
 
 ## Command line tool
-brew install nushell nvim starship zoxide fzf zellij lazydocker httpie carapace
+brew install nushell nvim starship zoxide fzf zellij lazydocker httpie carapace zk
 
 ## Lang toolchain
 if ! command -v devpod &> /dev/null; then
