--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -26,6 +26,7 @@ unset rc
 
 ## USER
 export STARSHIP_CONFIG=~/.config/starship/.starship.toml
+export ZK_NOTEBOOK_DIR=~/notebook
 
 export EDITOR=nvim
 export VISUAL=nvim
