--- a/run_onchange_00-install-packages.sh.tmpl
+++ b/run_onchange_00-install-packages.sh.tmpl
@@ -3,13 +3,31 @@
 # Common Mac and Linux Bazzite stuff
 
 ## Command line tool
-brew install nushell nvim starship zoxide fzf zellij lazydocker httpie carapace zk
+brew install nushell \
+    nvim \
+    starship \
+    zoxide \
+    fzf \
+    zellij \
+    lazydocker \
+    httpie \
+    carapace \
+    zk \
+    atuin \
+    direnv \
+    fd \
+    ripgrep \
+    tealdeer \
+    television \
+    ugrep \
+    uutils \
+    yq 
 
 ## Lang toolchain
 if ! command -v devpod &> /dev/null; then
-    curl -L -o devpod "https://github.com/loft-sh/devpod/releases/latest/download/devpod-linux-amd64" && sudo install -c -m 0755 devpod /usr/local/bin && rm -f devpod
+curl -L -o devpod "https://github.com/loft-sh/devpod/releases/latest/download/devpod-linux-amd64" && sudo install -c -m 0755 devpod /usr/local/bin && rm -f devpod
 else 
-    echo "Devpod already installed"
+echo "Devpod already installed"
 fi
 
 brew install go pnpm fnm uv
