--- a/run_onchange_00-install-packages.sh.tmpl
+++ b/run_onchange_00-install-packages.sh.tmpl
@@ -20,29 +20,17 @@ brew install nushell \
     tealdeer \
     television \
     ugrep \
-    uutils \
+    uutils-coreutils \
     yq 
 
-## Lang toolchain
-if ! command -v devpod &> /dev/null; then
-curl -L -o devpod "https://github.com/loft-sh/devpod/releases/latest/download/devpod-linux-amd64" && sudo install -c -m 0755 devpod /usr/local/bin && rm -f devpod
-else 
-echo "Devpod already installed"
-fi
 
-brew install go pnpm fnm uv
-
-if command -v fnm &> /dev/null; then
-    echo "fnm present. Installing node"
-    fnm install --lts
-    fnm use default
-fi
+brew install go uv oven-sh/bun/bun
 
 # tool dependent on npm
-npm install -g @bitwarden/cli
+bun install -g @bitwarden/cli
 
 # bazzite flatpacks
-{{- if eq .chezmoi.hostname "bluefin-laptop" }}
+{{- if eq .chezmoi.hostname "bluefin-laptop" "bluefin-desktop" }}
 flatpak -y --system --or-update install bitwarden
 flatpak -y --system --or-update install vivaldi
 {{- end }}
