Add pnpm (again)

--- a/run_onchange_00-install-packages.sh.tmpl
+++ b/run_onchange_00-install-packages.sh.tmpl
@@ -22,7 +22,8 @@ brew install nushell \
     ugrep \
     uutils-coreutils \
     yq \
-    bitwarden-cli
+    bitwarden-cli \
+    pnpm
 
 
 brew install go uv oven-sh/bun/bun node
