Add github user

--- a/run_onchange_00-install-packages.sh.tmpl
+++ b/run_onchange_00-install-packages.sh.tmpl
@@ -2,7 +2,10 @@
 
 # Common Mac and Linux Bazzite stuff
 
-brew install go uv oven-sh/bun/bun node
+brew install go \
+    uv \
+    oven-sh/bun/bun \
+    node@22
 
 ## Command line tool
 brew install nushell \
