Add init scripts

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -36,3 +36,5 @@ eval "$(zoxide init bash)"
 ### bling.sh source start
 test -f /usr/share/ublue-os/bling/bling.sh && source /usr/share/ublue-os/bling/bling.sh
 ### bling.sh source end
+
+PATH=$PATH:~/.filen-cli/bin
