--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -183,6 +183,10 @@ if type brew &>/dev/null; then
     compinit
 fi
 
+# filen
+PATH=$PATH:~/.filen-cli/bin
+
+
 {{- if eq .chezmoi.hostname "WQVDJYK1JW" }}
 ###-begin-grond-completions-###
 #
