--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -31,3 +31,6 @@ sourceDir = {{ .chezmoi.sourceDir | quote }}
 
 [cd]
     command = "/home/linuxbrew/.linuxbrew/bin/nu"
+
+[hooks.read-source-state.pre]
+    command = ".local/share/chezmoi/.install-prerequisites.sh"
