--- a/run_onchange_00-install-packages.sh.tmpl
+++ b/run_onchange_00-install-packages.sh.tmpl
@@ -23,7 +23,7 @@ brew install nushell \
     uutils-coreutils \
     yq \
     bitwarden-cli \
-    pnpm
+    gemini-cli
 
 ## install npm tools
 npm install -g @devcontainers/cli
