Add cli to manage AppImage

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -37,4 +37,7 @@ eval "$(zoxide init bash)"
 test -f /usr/share/ublue-os/bling/bling.sh && source /usr/share/ublue-os/bling/bling.sh
 ### bling.sh source end
 
+# ALIASES
+alias gearlever='flatpak run it.mijorus.gearlever'
+
 PATH=$PATH:~/.filen-cli/bin
