--- a/run_onchange_00-install-packages.sh.tmpl
+++ b/run_onchange_00-install-packages.sh.tmpl
@@ -28,14 +28,8 @@ brew install nushell \
     git-delta \
     charmbracelet/tap/crush
 
-# NPM
-npm install -g @charmland/crush
-
-# Arch Linux (btw)
-yay -S crush-bin
-
-# Nix
-nix run github:numtide/nix-ai-tools#crush
+# cask
+brew install --cask lm-studio
 
 ## install npm tools
 npm install -g @devcontainers/cli
