--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -213,3 +213,9 @@ compdef _grond_yargs_completions grond
 source ~/.keprc
 
 {{- end}}
+# Added by LM Studio CLI (lms)
+export PATH="$PATH:/Users/f.brousseau-tremblay/.lmstudio/bin"
+# End of LM Studio CLI section
+
+
+export PATH=$HOME/.local/bin:$PATH
