Add ripgrep config and update kitty theme

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -41,3 +41,7 @@ test -f /usr/share/ublue-os/bling/bling.sh && source /usr/share/ublue-os/bling/b
 alias gearlever='flatpak run it.mijorus.gearlever'
 
 PATH=$PATH:~/.filen-cli/bin
+
+
+# Ripgrep configuration
+export RIPGREP_CONFIG_PATH=$HOME/.config/nvim/.ripgreprc
