--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -56,3 +56,4 @@ export PATH="$PATH:/Users/felbro/.lmstudio/bin"
 
 # Ripgrep configuration
 export RIPGREP_CONFIG_PATH=$HOME/.config/nvim/.ripgreprc
+. "$HOME/.cargo/env"
